[package]
name = "nanoleaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
dirs = "1.0.5"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
rust-ini = "0.20.0"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
